Review of layout  - review of layout/sample content  - url format for posts: blog/year/title  - underscore works as for github markdown  - force vertical scrollbar to avoid jumps when it appears

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,12 +18,17 @@ a {
 }
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
+h3 {
     font-weight: 300;
 }
+
+
+h1 {font-size: 1.9em;}
+
+h2 {font-size: 1.6em;}
+
+h3 {font-size: 1.35em;}
+
 blockquote {
     font-style: italic;
     padding-left: 1rem;
